--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							</div>
 						</li>
 						<li class="hidemobile">
-							<a data-bs-toggle="modal" data-bs-target="#myModal" class="btn-br bg-btn3 btshad-b2 lnk">Request A Quote <span class="circle"></span></a>
+							<a data-bs-toggle="modal" data-bs-target="#myModal" class="niwax-btn2 lnk">Request A Quote <span class="circle"></span></a>
 						</li>
 						<li class="hidedesktop darkmodeswitch">
 							<div class="switch-wrapper">
