--- a/smart-touch.html
+++ b/smart-touch.html
@@ -397,10 +397,9 @@
 		<div class="hero-main-rp container-fluid">
 			<div class="row ">
 				<div class="col-lg-12 text-center">
-					<h1 class="text-center touchBannerHeading ml3">SMART TOUCH</h1>
-					<h1 class="text-center touchBannerSubHeading ml3">Real Estate Marketing Software </h1>
-
-					<button type="button" class="btn btn-outline-info">request a demo</button>
+					<h2 class="text-center text-white">SMART TOUCH</h2>
+					<h3 class="text-center text-white pt-3">Real Estate Marketing Software </h3>
+					<button type="button" class="btn btn-outline-info mt-3">Request a Demo</button>
 				</div>
 			</div>
 		</div>
@@ -503,33 +502,32 @@
 			</div>
 
 			<div class="row py-4">
-				<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-					<div class="card cardSmartTouchText cardSmartTouch">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="card smart-touch-card">
 						<div class="card-body">
-							<h5 class="card-title cardSmartTouchTextHeading">Perfect way to sell property to picky customers</h5>
-							<p class="card-text cardSmartTouchTextDescription">Easy to showcase the model of the architectonic and constructive design by 2D and 3D model through smart touch screen that lets people have live experience so that they get a clear image of it. </p>
-
+							<h5 class="card-title smart-touch-card-heading">Perfect way to sell property to picky customers</h5>
+							<p class="card-text smart-touch-card-desc">Easy to showcase the model of the architectonic and constructive design by 2D and 3D model through smart touch screen that lets people have live experience so that they get a clear image of it. </p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-					<div class="card cardSmartTouch">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="card smart-touch-card-img mt-3 mt-sm-3 mt-md-3 mt-lg-0">
 						<img src="images/solutions/smart-touch/sell-property.webp" alt="Sell Property">
 					</div>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-					<div class="card cardSmartTouch">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="card smart-touch-card-img">
 						<img src="images/solutions/smart-touch/architectural-projects.webp" alt="Architectural Projects">
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-					<div class="card cardSmartTouchText cardSmartTouch">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="card smart-touch-card mt-3 mt-sm-3 mt-md-3 mt-lg-0">
 						<div class="card-body">
-							<h5 class="card-title cardSmartTouchTextHeading">Device to present architectural projects</h5>
-							<p class="card-text cardSmartTouchTextDescription">Smart touch is a slim device that can be carried easily in a workplace. It is an effective screen to show the expansion in visualization with realistic images. </p>
+							<h5 class="card-title smart-touch-card-heading">Device to present architectural projects</h5>
+							<p class="card-text smart-touch-card-desc">Smart touch is a slim device that can be carried easily in a workplace. It is an effective screen to show the expansion in visualization with realistic images. </p>
 						</div>
 					</div>
 				</div>
@@ -542,8 +540,7 @@
 	<section class="py-3 py-md-3 py-lg-5 smart-touch-img">
 		<img src="images/solutions/smart-touch/main-banner.webp" alt="" >
         <div class="centered">
-            <h1 class="touchBannerSubHeading ml3" >See into the future and</h1>
-			<h1 class="touchBannerSubHeading ml3" >feel it at your fingertips!</h1>
+            <h2 class="touchBannerSubHeading text-white">See into the future and<br> feel it at your fingertips!</h2>
         </div>
 	</section>
     <!-- End Smart Touch Image -->
@@ -554,7 +551,7 @@
 			<div class="row justify-content-center text-center">
 				<div class="col-lg-12">
 					<div class="common-heading">
-						<h1 class="mb30 text-center">A whole new world of marketing opportunities</h1>
+						<h2 class="mb30 text-center">A whole new world of marketing opportunities</h2>
 						<p class="text-center">Experiencing different 3D exterior visualization on a touch screen with high end quality display and high-definition video in a gadget or on website that could create a different whole look that showcases the opportunities for the marketers.</p>
 					</div>
 				</div>
@@ -575,7 +572,7 @@
 			<div class="row justify-content-center text-center">
 				<div class="col-lg-12">
 					<div class="common-heading">
-						<h1 class="mb30 text-center text-white">Smart-touch Mobile & Tablet Version</h1>
+						<h2 class="mb30 text-center text-white">Smart-touch Mobile & Tablet Version</h2>
 						<p class="text-white text-center">It lets you explore the model and menu of the Mobile and Tablet version that assist in understanding the functionality.
 						</p>
 					</div>
@@ -598,27 +595,27 @@
 					</p>
 				</div>
 			</div>
-			<div class="row py-5 justify-content-center">
+			<div class="row py-3 justify-content-center">
 				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/solutions/smart-touch/presentation-software.webp" alt="Presentation Software" >
 				</div>
-				<div class="col-lg-6 wow fadeInRight my-auto">
+				<div class="col-lg-6 wow fadeInRight my-auto pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<h3 class="text-white">The Core of Smart touch presentation software</h3>
 					<p class="pt-2 text-white">Outwardly, Smart Touch programming is managed by smooth and customizable points of interaction: every symbol, slider, and the overall design of the programme may be fine-tuned to your specifications. Smooth stage movements contribute to the provided space's great realism, with no aftereffects on the audience. </p>
 				</div>
 			</div>
 
-			<div class="row py-5 justify-content-center">
+			<div class="row py-3 justify-content-center">
 				<div class="col-lg-6 wow fadeInLeft my-auto">
 					<h3 class="text-white">Beast inside:meye-catching photo real 3D renders:</h3>
 					<p class="pt-2 text-white">Marketing approaches that combine realistic architectural 3D models. Demonstrating the massive building and erection of a 100.00sqm residential sector with extensive infrastructure improvements.</p>
 				</div>
-				<div class="col-lg-6 wow fadeInRight v-center">
+				<div class="col-lg-6 wow fadeInRight v-center pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<img src="images/solutions/smart-touch/3d-renders.webp" alt="3D Renders" >
 				</div>
 			</div>
 
-			<div class="row py-5 justify-content-center">
+			<div class="row py-3 justify-content-center">
 				<div class="col-lg-12">
 					<div class="common-heading">
 						<h3 class="mb30 text-center text-white">Beauty outside: custom-built shiny interface</h3>
@@ -628,23 +625,21 @@
 				</div>
 			</div>
 
-
-			<div class="row py-5 justify-content-center">
+			<div class="row py-3 justify-content-center">
 				<div class="col-lg-6 wow fadeInLeft my-auto">
 					<h3 class="text-white">Smart Touch Application Powerful Tools</h3>
 					<p class="text-white pt-2">Smart touch application is accused of having strong and lavish accessories to ensure that you have all you need in one place to manage everything. The application is simple to use and comprehend.</p>
 				</div>
-				<div class="col-lg-6 wow fadeInRight v-center">
+				<div class="col-lg-6 wow fadeInRight v-center pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<img src="images/solutions/smart-touch/powerful-tools.webp" alt="Powerful Tools" >
 				</div>
-				
 			</div>
 
-			<div class="row py-5">
+			<div class="row py-3">
 				<div class="col-lg-6 wow fadeInLeft v-center">
 					<img src="images/solutions/smart-touch/marketing-operation.webp" alt="Marketing Operations" >
 				</div>
-				<div class="col-lg-6 wow fadeInRight my-auto">
+				<div class="col-lg-6 wow fadeInRight my-auto pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<h3 class="text-white">Beast inside:meye-catching photo real 3D renders:</h3>
 					<p class="text-white pt-2">Marketing approaches that combine realistic architectural 3D models. Demonstrating the massive building and erection of a 100.00sqm residential sector with extensive infrastructure improvements.</p>
 				</div>
@@ -665,7 +660,7 @@
 			<div class="row">
 				<div class="col-lg-6 wow fadeInLeft my-auto">
 					<h3 class="plan-heading">Floor plan</h3>
-					<p class="plan-text">The structural element of all types of apartments are distinguished in terms of size, yards, number of rooms and ground/upper. For a simple and cost-effective way to experience your floorplans, we take your 2D marketing plan and add walls in 3D, giving the feeling you are actually walking through a life-sized floor plan. For added impact, we can add your panoramic views outside the windows.
+					<p class="plan-text pt-3">The structural element of all types of apartments are distinguished in terms of size, yards, number of rooms and ground/upper. For a simple and cost-effective way to experience your floorplans, we take your 2D marketing plan and add walls in 3D, giving the feeling you are actually walking through a life-sized floor plan. For added impact, we can add your panoramic views outside the windows.
 					</p>
 				</div>
 				<div class="col-lg-6 wow fadeInRight v-center">
@@ -673,44 +668,44 @@
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-lg-6 wow fadeInLeft my-auto">
+			<div class="row py-3">
+				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/solutions/smart-touch/payment-plan.webp" alt="" height="568px" width="100%" class="img-fluid">
 				</div>
-				<div class="col-lg-6 wow fadeInRight">
+				<div class="col-lg-6 wow fadeInRight my-auto">
 					<h3 class="plan-heading">Comparison in terms of payment Plan </h3>
-					<p class="descriptionAugmented"> It has the ability to provide different types of apartments with varying sizes and costs can be compared side by side, along with all essential information. </p>
+					<p class="plan-text pt-3 pt-sm-3 pt-md-3 pt-lg-0"> It has the ability to provide different types of apartments with varying sizes and costs can be compared side by side, along with all essential information. </p>
 				</div>
 			</div>
 
 
-			<div class="row ">
+			<div class="row py-3">
 				<div class="col-lg-6 wow fadeInLeft my-auto">
 					<h3 class="plan-heading">Lead generation</h3>
-					<p class="plan-text">The practice of garnering the interest of potential clients in order to attract and turn a prospect into a buyer of your goods or services. The process requires certain information that includes name, number, cnic and email address.
+					<p class="plan-text pt-3">The practice of garnering the interest of potential clients in order to attract and turn a prospect into a buyer of your goods or services. The process requires certain information that includes name, number, cnic and email address.
 					</p>
 				</div>
-				<div class="col-lg-6 wow fadeInRight v-center">
+				<div class="col-lg-6 wow fadeInRight v-center pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<img src="images/solutions/smart-touch/plan-lead-generation.webp" alt="Plan Lead Generation" height="568px" width="100%" class="img-fluid">
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row py-3">
 				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/solutions/smart-touch/exterior-interior-plan.webp" alt="Exterior & Interior Plan" class="img-fluid">
 				</div>
-				<div class="col-lg-6 wow fadeInRight my-auto">
+				<div class="col-lg-6 wow fadeInRight my-auto pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<h3 class="plan-heading">Exterior and interior Plan</h3>
 					<p class="plan-text"> Potentially can provide all of the inside and outside interior ideas, designs and styles of your home, which can be viewed digitally.</p>
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row py-3">
 				<div class="col-lg-6 wow fadeInLeft my-auto">
 					<h3 class="plan-heading">Weather Adjustment</h3>
 					<p class="plan-text">Smart touch has the ability to display weather conditions to visually inspect the features and details.</p>
 				</div>
-				<div class="col-lg-6 wow fadeInLeft">
+				<div class="col-lg-6 wow fadeInLeft pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<img src="images/solutions/smart-touch/weather-adjustment.webp" alt="Weather Adjustment" class="img-fluid">
 				</div>
 			</div>
