--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 														<ul class="submenu">
 															<li><a href="smart-drive.html">Smart Drive</a></li>
 															<li><a href="smart-touch.html">Smart Touch</a></li>
-															<li><a href="smart-touch.html">Smart Room</a></li>
+															<li><a href="smart-room.html">Smart Room</a></li>
 														</ul>
 													</li>
 												</ul>
@@ -295,7 +295,7 @@
 								<ul class="submenu">
 									<li><a href="smart-drive.html">Smart Drive</a></li>
 									<li><a href="smart-touch.html">Smart Touch</a></li>
-									<li><a href="smart-touch.html">Smart Room</a></li>
+									<li><a href="smart-room.html">Smart Room</a></li>
 								</ul>
 							</li>	
 							<li><a href="#">Virtual Reality</a>
