--- a/smart-room.html
+++ b/smart-room.html
@@ -394,12 +394,12 @@
 
 	<!-- Start Hero -->
 	<section class="hero-card-web smart-room-banner">
-		<div class="hero-main-rp container">
+		<div class="container">
 			<div class="row justify-content-start">
 				<div class="col-sm-12 col-md-6 col-lg-5 v-center">
 					<h2 class="smart-room-heading">furniture with interactive 3D</h2>
 					<p class="smart-room-text py-4">dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
-					<button class="smart-room-btn" style="margin-left: 0px">TRY NOW</button>
+					<button class="smart-room-btn">TRY NOW</button>
 				  </div>
 			</div>
 		</div>
@@ -443,7 +443,7 @@
 					<h3 class="smart-room-about-heading">Interior Decor Accessories</h3>
 					<p class="smart-room-about-text pt-2">It is an ideal marketing solution for furniture and lighting fixture manufacturers, as well as manufacturers of décor items and finishing materials and other associated enterprises.</p>
 				</div>
-				<div class="col-lg-6 wow fadeInRight v-center">
+				<div class="col-lg-6 wow fadeInRight v-center pt-3 pt-sm-3 pt-md-3 pt-lg-0">
 					<img src="images/solutions/smart-room/interior-decor-accessories.webp" alt="Interior Decor Accessories" class="img-fluid">
 				</div>
 			</div>
@@ -472,7 +472,7 @@
 	<section class="smart-room-comparsion py-3 py-md-3 py-lg-5">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 					<div class="common-heading ptag">
 						<h3 class="text-center">Furniture Configuration</h3>
 						<p class="py-3 text-center">Experiment with different finishes, soft and modular furniture in many colors and tints, kitchen units, bedroom and living room furniture, sanitaryware office equipment, and so on.</p>
@@ -489,7 +489,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-12">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 					<div class="common-heading ptag">
 						<h3 class="text-center">Light Customization</h3>
 						<p class="py-3 text-center">Ceiling-mounted fixtures, pendants, recessed lighting, track lighting and spotlights, and dimmable wall sconces are all examples of lighting fixtures with varied light patterns.</p>
@@ -505,7 +505,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-12">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 					<div class="common-heading ptag">
 						<h3 class="text-center">Wall and floor Coverings</h3>
 						<p class="py-3 text-center">Wall and floor Coverings Choose from a variety of flooring textures, paints, stone wallpapers, tiles, PVC, and carpet varieties.</p>
@@ -521,7 +521,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-12">
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
 					<div class="common-heading ptag">
 						<h3 class="text-center">Interior Decor Accessories</h3>
 						<p class="py-3 text-center">See what decor elements, such as curtains, pillows, tablecloths, ornamental craft goods, paintings, and plants, best match the interior.</p>
@@ -545,18 +545,18 @@
 	<section class="smart-room-customize py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-10 col-md-10 col-sm-10 col-12 wow fadeInLeft ">
+				<div class="col-lg-10 col-md-10 col-sm-10 col-12 wow fadeInDown">
 					<div class="common-heading">
-						<h2 class="text-white">Infinite Product Customization Possibilities</h2>
+						<h2 class="text-white text-center">Infinite Product Customization Possibilities</h2>
 					</div>
 				</div>
 			</div>
 
 			<div class="row pt-4">
-				<div class="col-lg-6">
+				<div class="col-lg-6 wow fadeInLeft">
 					<p class="text-white text-center">Clients may examine all of the alternatives available in stock in realistic situations with the virtual 3D product customizer. It helps clients make better decisions by allowing them to examine the objects in the authentically portrayed interior.</p>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-6 wow fadeInRight">
 					<p class="text-white text-center">The items can be displayed alone or in groups to form a furniture collection. The amount of exhibited elements and their possibilities are solely limited by your demands and have no impact on the presentation's smoothness.</p>
 				</div>
 			</div>
@@ -611,8 +611,147 @@
 					</div>
 				</div>
 			</div>
-
 	</section>
+	 <!-- Start Virtual Customizer -->
+
+	<!-- Start Enquire Form -->
+	<section class="contact-page py-3 py-md-3 py-lg-5">
+		<div class="container">
+			<div class="row justify-content-between">
+				<div class="col-lg-6 m-mt30 my-auto">
+					<ul class="nav nav-pills justify-content-center" role="tablist">
+						<li class="nav-item">
+						  	<a class="nav-link active" data-bs-toggle="pill" href="#usa">USA</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
+					  	</li>
+						<li class="nav-item">
+						  	<a class="nav-link" data-bs-toggle="pill" href="#uk">UK</a>
+						</li>
+					</ul>
+					
+					<!-- Tab panes -->
+					<div class="tab-content text-center">
+						<div id="usa" class="container tab-pane active">
+							<br>
+							<h3 class="text-white">USA</h3>
+							<p class="text-white pt-3">725 N San Vicente Blvd, Ste 800 West, West Hollywood, Los Angeles, CA, US 90069</p>
+							<p class="text-white pt-3">+1 (310) 596-3004</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+						<div id="pakistan" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">Pakistan</h3>
+							<p class="text-white pt-3">Plot # 115-B, P.E.C.H.S Block 2, 75400, Karachi, Pakistan</p>
+							<p class="text-white pt-3">+92-309-2221104</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+						<div id="uk" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">UK</h3>
+							<p class="text-white pt-3">Floor 7, Business Central Tower WA, Dubai Media City</p>
+							<p class="text-white pt-3">+44 20 8144 5577</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="niwax23form shadow">
+						<div class="common-heading text-l">
+							<h2 class="mt0 mb0">Get in touch</h2>
+							<p class="mb50 mt10">We will catch you as early as we receive the message</p>
+						</div>
+						<div class="contact-form-card-pr contact-block-sw m0 iconin">
+							<div class="form-block niwaxform">
+								<form action="#" id="contactform" method="post">
+									<div class="fieldsets row">
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-user"></i>
+											</div>
+											<input type="text" placeholder=" " required="required" id="name" class="floating-input" name="fullname">
+											<label>Full Name *</label>
+											<div class="error-label"></div>
+										</div>
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-phone-alt"></i>
+											</div>
+											<input type="tel" placeholder=" " required="required" id="mobile_number" class="floating-input" name="mobile_number">
+											<label>Mobile Number *</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets row">
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-envelope"></i>
+											</div>
+											<input type="email" placeholder=" " required="required" id="email" class="floating-input" name="email">
+											<label>Email Address *</label>
+											<div class="error-label"></div>
+										</div>
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-file-alt"></i>
+											</div>
+											<select required="required" id="interested_in" class="floating-select" name="interested_in">
+												<option value="select">Select</option>
+												<option value="game">Game Development</option>
+												<option value="vr">Virtual Reality Development</option>
+												<option value="ar">Augmented Reality Development</option>
+												<option value="metaverse">Metaverse Development</option>
+												<option value="mr">Mixed Reality Development</option>
+												<option value="mobile-apps">Mobile Apps Development</option>
+												<option value="website">Website Development</option>
+												<option value="automation">Industrial Automation</option>
+												<option value="animation">Animation Services</option>
+												<option value="design">2D & 3D Design Services</option>
+											</select>
+											<label>Services *</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets row">
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-building"></i>
+											</div>
+											<input type="text" placeholder=" " id="company" class="floating-input" name="company">
+											<label>Company Name (Opional)</label>
+										</div>
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-comment"></i>
+											</div>
+											<input type="text" placeholder=" " required="required" id="skype_whatsapp_no" class="floating-input" name="skype_whatsapp_no">
+											<label>Subject</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets row textareax">
+										<div class="col-md-12 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-comment-alt"></i>
+											</div>
+											<textarea placeholder=" " required="required" id="description" class="floating-input" name="description"></textarea>
+											<label>Enter Message *</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets mt20">
+										<button type="submit" name="submit" class="btn btn-main bg-btn w-fit mb20"><span>Submit <i class="fas fa-chevron-right fa-icon"></i></span> <span class="loader"></span></button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Enquire Form-->
 
 	<!-- Start Footer -->
 	<footer>
