--- a/game-development.html
+++ b/game-development.html
@@ -2110,7 +2110,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-10">
                     <div class="common-heading ptag text-center">
-                        <h2 class="common-heading text-center">Reach a global market with andriod app developement services</h2>
+                        <h2 class="common-heading text-center">Reach a global market with game developement services</h2>
                         <p class="">Along with designing and developing your web presence, we propose business-oriented solutions that fit your needs and speak volumes of your values as a brand. With experienced web developers and digital artisans, you get a state-of-the-art solution with a cutting-edge appeal that engages more people online. Leverage powerful technologies & robust architecture to build a web solution that fulfills your needs under packaged web development services.</p>
                     </div>
                 </div>
