--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 											</div>
 											<div class="sub-menu-column">
 												<ul>
-													<li><a href="augmented-reality-development.html">3D Exterior Rendering Service</a></li>
-													<li><a href="mobile-app-development.html">3D Interior Rendering Service</a></li>
-													<li><a href="animation-services.html">2D 3D Floor Plan Service</a></li>
+													<li><a href="3d-exterior-rendering-services.html">3D Exterior Rendering Service</a></li>
+													<li><a href="3d-interior-rendering-services.html">3D Interior Rendering Service</a></li>
+													<li><a href="2d-and-3d-floor-plan-service.html">2D 3D Floor Plan Service</a></li>
 												</ul>
 											</div>
 										</div>
@@ -274,6 +274,9 @@
 							<li><a href="industrial-automation.html">Industrial Automation</a></li>
 							<li><a href="animation-services.html">Animation Services</a></li>
 							<li><a href="2d-and-3d-design-services.html">2D & 3D Design Services</a></li>	
+							<li><a href="3d-exterior-rendering-services.html">3D Exterior Rendering Service</a></li>
+							<li><a href="3d-interior-rendering-services.html">3D Interior Rendering Service</a></li>
+							<li><a href="2d-and-3d-floor-plan-service.html">2D 3D Floor Plan Service</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Solutions</a>
