--- a/smart-drive.html
+++ b/smart-drive.html
@@ -393,8 +393,8 @@
 	<!-- End Header -->
 
     <!-- Start Breadcrumb Area -->
-    <section class="ldrive-page">
-        <img src="images/solutions/smart-drive/ldrive-main-banner.jpg" alt="" height="100%" width="100%" />
+    <section class="smart-drive-page">
+        <img src="images/solutions/smart-drive/ldrive-main-banner.jpg" alt="" class="img-fluid" />
     </section>
 	<!-- End Breadcrumb Area -->
 
@@ -404,8 +404,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-10 wow fadeInLeft">
                     <div class="common-heading">
-                        <p class="text-white">
-							<span class="fw-bold text-white">AUTOLIFT:</span>
+                        <p class="text-white"><span class="fw-bold text-white">Autolift</span>
 							With virtual 3D car tuning software, you may create your fantasy car. For dealerships, autolift is a clever and multi-functional interactive vehicle customizer with a realistic 3D car model.
                         </p>
                     </div>
@@ -482,8 +481,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 fadeInRight v-center">
                     <div class="card cardSmartTouchA">
-                        <h1 class="headingAboutSec">AutoLift Application Features:</h1>
-                        <ul class="advantagesList">
+                        <h3>AutoLift Application Features:</h3>
+                        <ul class="advantages-list">
                             <li>Create the vehicle's primary finish and accessories.</li>
                             <li>Fly around the car to get a better look at it.</li>
                             <li>Take a look at the modified car in action.</li>
@@ -495,7 +494,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 v-center fadeInLeft">
-                    <div class="card cardSmartTouchA"><img src="images/solutions/smart-drive/autolift-application-features.jpg" alt="" height="100%" width="100%"></div>
+                    <img src="images/solutions/smart-drive/autolift-application-features.jpg" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -504,7 +503,7 @@
 
 	<!-- Start L-Drive Video -->
     <section>
-		<img src="images/solutions/smart-drive/autolift-application-features-banner.jpg" alt="" height="100%" width="100%">
+		<img src="images/solutions/smart-drive/autolift-application-features-banner.jpg" alt="" class="img-fluid">
 	</section>
 	<!-- End L-Drive Video -->
 
@@ -521,7 +520,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 v-center fadeInLeft">
                     <div class="card cardSmartTouchA" style="background-color:transparent">
-                        <img src="images/solutions/smart-drive/special-offers.jpg" alt="" height="100%" width="100%">
+                        <img src="images/solutions/smart-drive/special-offers.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
