--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 												<ul>	
 													<li><a href="#">Virtual Reality</a>
 														<ul class="submenu">
-															<li><a href="#">Real Estate Solution</a></li>
+															<li><a href="virtual-reality-in-real-estate.html">Real Estate Solution</a></li>
 															<li><a href="#">Metaverse</a></li>
 														</ul>
 													</li>
@@ -197,8 +197,7 @@
 												<ul>	
 													<li><a href="#">Augumented Reality</a>
 														<ul class="submenu">
-															<li><a href="#">Website</a></li>
-															<li><a href="#">Website</a></li>
+															<li><a href="augmented-reality-in-real-estate.html">Real Estate Solution</a></li>
 														</ul>
 													</li>
 												</ul>
